--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "npx jest"
   },
   "license": "ISC",
   "devDependencies": {
